# robot_ws

./: .gitignore  README.md  test.sh  tracer.rules
Map/: rtabmap.db
src/face_recognition/: package.xml  setup.py
src/face_recognition/face_recognition/: camera.py  face_recognition.py
src/my_2f85gripper/grpr2f85_ifaces/: CMakeLists.txt  package.xml
src/my_2f85gripper/grpr2f85_ifaces/srv/: GetGripperStatus.srv  Reset.srv  SetGripperState.srv
src/my_2f85gripper/my_2f85gripper_py/: package.xml  setup.cfg  setup.py
src/my_2f85gripper/my_2f85gripper_py/my_2f85gripper_py/: my_2f85_gripper.py
src/voice_control/: output.json  package.xml  setup.py
src/voice_control/voice_control/: voice_control.py
