<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>face_recognition</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jason9308@todo.todo">jason9308</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <!-- 主要的 ROS 2 依賴 -->
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- 額外的 Python 依賴 (如 OpenCV, YOLO, FaceNet) -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-facenet-pytorch</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
